--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "It is a todolist app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "author": "Amaan Zaidi",
   "license": "ISC",
