--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Amaan Zaidi",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.15.2"
